--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -35,14 +35,14 @@
                         type="radio"
                         id="mst-radio"
                         value="MST"
-                        (change)="updateTypeSelected('MST')"
+                        (change)="updateTypeSelected($event)"
                         formControlName="reasonTypeRadio"
                       />
                       <label
                         for="mst-radio"
                         class="type-text"
                       >
-                        Miscellaneous Text Submission to FEC (MST)
+                        Miscellaneous Report to FEC (MST)
                       </label>
                       <div class="type__info">
                         <button
@@ -76,14 +76,14 @@
                         type="radio"
                         id="msm-radio"
                         value="MSM"
-                        (change)="updateTypeSelected('MSM')"
+                        (change)="updateTypeSelected($event)"
                         formControlName="reasonTypeRadio"
                       />
                       <label
                         for="msm-radio"
                         class="type-text"
                       >
-                        Filing Frequency Change Notice (MSM)
+                        Filing Frequency Chance Notice (MSM)
                       </label>
                       <div class="type__info">
                         <button
@@ -117,13 +117,13 @@
                         type="radio"
                         id="msi-radio"
                         value="MSI"
-                        (change)="updateTypeSelected('MSI')"
+                        (change)="updateTypeSelected($event)"
                         formControlName="reasonTypeRadio"
                       />
                       <label
                         for="msi-radio"
                         class="type-text"
-                        (click)="updateTypeSelected('MSI')"
+                        (click)="updateTypeSelected($event)"
                       >
                         Disavowal Response (MSI)
                       </label>
@@ -159,6 +159,7 @@
                         type="radio"
                         id="msw-radio"
                         value="MSW"
+                        (change)="updateTypeSelected($event)"
                         formControlName="reasonTypeRadio"
                       />
                       <label
