Mahendra's recent changes

--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -15,14 +15,15 @@
         <div class="sidebar__nav--header">
           <i class="folder-icon" aria-hidden="true"></i>
           My Forms
+        <br />
         </div>
         <div class="sidebar__nav--links">
           <ul class="links-list">
             <li>
-              &nbsp;PAC & Party Report of Receipts & Disbursements (F3X)
+                <p class="tab">PAC & Party Report of Receipts & Disbursements (F3X)</p>
             </li>
             <li>
-               &nbsp;Report of Contributors Bundled (F3L)
+                <p class="tab">Report of Contributors Bundled (F3L)</p>
             </li>
           </ul>
         </div>
@@ -30,6 +31,7 @@
           <br />
           <i class="plus-icon" aria-hidden="true"></i>
                   Other Forms
+                  <br />
         </div>
         <div class="sidebar__nav--links">
           <ul class="links-list">
@@ -38,7 +40,8 @@
                 [routerLink]="['/forms/form/', '99']"
                 [queryParams]="{ step: 'step_1' }"
               >
-              &nbsp;Miscellaneous Report to the FEC (F99)
+              
+              <p class="tab">Miscellaneous Report to the FEC (F99)</p>
               </a>
             </li>
           </ul>
