Mahendra's latest changes

--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -83,7 +83,7 @@
                         for="msm-radio"
                         class="type-text"
                       >
-                        Filing Frequency Chance Notice (MSM)
+                        Filing Frequency Change Notice (MSM)
                       </label>
                       <div class="type__info">
                         <button
