--- a/front-end/src/app/reports/reports.component.html
+++ b/front-end/src/app/reports/reports.component.html
@@ -2,7 +2,7 @@
 	<div class="reports-container">
 	    <div class="grid-row">
 	      <div class="grid-row__col grid-row__col--12">
-					<h1 class="text-center">Reports</h1>
+					<h1 class="text-left">Reports</h1>
 					<table class="table-striped" style="width:100%">
 					<thead>
 						<tr text-align="left">
@@ -32,4 +32,26 @@
 	      </div>
 	    </div>		
 	</div>
+ <div>
+	<footer>
+        <div class="footer">
+          <div class="legal-disclaimer">
+            <button
+              type="button"
+              class="btn btn-link"
+              (click)="open()"
+            >
+              Legal Disclaimer
+            </button>
+          </div>
+          <div class="legal-text" [hidden]="!showLegalDisclaimer">
+            <p>
+              Please be advised that knowingly and willfully making any materially false, fictitious, or fraudulent statement or representation to a federal
+              government agency, including the Federal Election Commission, is punishable under the provisions of 18 U.S.C. § 1001. The Commission may report
+              apparent violations to the appropriate law enforcement authorities. 52 U.S.C. § 30107(a)(9).
+            </p>          
+          </div>          
+        </div>
+      </footer>
+ </div>	
 </section>
