--- a/front-end/src/app/shared/partials/submit/submit.component.html
+++ b/front-end/src/app/shared/partials/submit/submit.component.html
@@ -6,7 +6,7 @@
   <section>
     <div class="content">
       Your form has been successfully filed. You will receive an email confirmation shortly.
-      If you don’t receive a confirmation email, please contact the Electronic Filing Office at (202) 694-1307.
+      If you don’t receive a confirmation email, please contact our tech support team at (202) 694 - 1002.
     </div>
   </section>
 </div>
