Mahendra's app dash and submit changes

--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 
 <section>
     <div class="dashboard">
-        <div class="grid-row">
+        <!--<div class="grid-row">-->
           <div class="grid-row__col grid-row__col--12">
               <div class="row">
                   <section class="card col-lg-6 mb-3">
@@ -24,8 +24,8 @@
                     <h2 class="pb-3 pt-3 border-bottom">Tips for Treasurers</h2>
                     <p></p>
                   </section>
-                </div>
-                <div class="row">
+              </div>
+              <div class="row">
                   <section class="card col-lg-6 mb-3">
                     <h2 class="pb-3 pt-3 border-bottom">Helpful Resources</h2>
                     <p></p>
@@ -91,10 +91,9 @@
                       </tbody>
                     </table>
                   </section>
-                </div>
-      
+              </div>
           </div>
-        </div>
+        <!--</div>-->
         <footer>
           <div class="footer">
             <div class="legal-disclaimer">
