Mahendra's changes env, rep, sub, log,app,ind, dash

--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -42,7 +42,7 @@
                         for="mst-radio"
                         class="type-text"
                       >
-                        Miscellaneous Report to FEC (MST)
+                        FEC (MST)
                       </label>
                       <div class="type__info">
                         <button
