--- a/front-end/src/app/reports/reports.component.html
+++ b/front-end/src/app/reports/reports.component.html
@@ -12,7 +12,7 @@
 							<th text-align="left">Coverage Start Date</th>
 							<th text-align="left">Coverage End Date</th>
 							<th text-align="left">Report</th>
-							<th text-align="left">Filed Date</th>
+							<th text-align="left">Filed/Saved Date</th>
 							<th text-align="left">Actions</th>
 						</tr>
 					</thead>	
@@ -33,7 +33,7 @@
 	    </div>		
 	</div>
  <div>
-	<footer>
+	<!--<footer>
         <div class="footer">
           <div class="legal-disclaimer">
             <button
@@ -52,6 +52,6 @@
             </p>          
           </div>          
         </div>
-      </footer>
+      </footer>-->
  </div>	
 </section>
