--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="sidebar__nav">
         <div class="sidebar__nav--header">
-          <i class="folder-icon" aria-hidden="true"></i>
+          <i class="file-icon" aria-hidden="true"></i>
           My Forms
         <br />
         </div>
@@ -41,7 +41,11 @@
                    <span class="sr-only">Click here for more information</span>
                  </button>
                 <ng-template #f3xContent>
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae metus mollis, interdum erat ac, placerat turpis. Duis tincidunt diam vel sapien semper, sed mattis nibh facilisis.    
+                  Used by PACs and political party committees to report receipts and disbursements. 
+                  <a href="https://www.fec.gov/resources/cms-content/documents/fecfrm3xi.pdf" target="_blank">Instructions</a>
+                 <i class="external-link-icon" aria-hidden="true">
+                   <span class="sr-only">Link opens in new window.</span>
+                 </i>.                     
                 </ng-template>                
               </div>
             </li>
@@ -67,7 +71,11 @@
                    <span class="sr-only">Click here for more information</span>
                  </button>
                 <ng-template #f3lContent>
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae metus mollis, interdum erat ac, placerat turpis. Duis tincidunt diam vel sapien semper, sed mattis nibh facilisis.    
+                 Used by committees to report bundled contributions forwarded by or credited to lobbyists, registrants and their PACs. 
+                 <a href="https://www.fec.gov/resources/cms-content/documents/fecfrm3li.pdf" target="_blank">Instructions</a>
+                 <i class="external-link-icon" aria-hidden="true">
+                   <span class="sr-only">Link opens in new window.</span>
+                 </i>.    
                 </ng-template>                  
               </div>
             </li>
@@ -109,7 +117,7 @@
                    <span class="sr-only">Click here for more information</span>
                  </button>
                 <ng-template #f99Content>
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae metus mollis, interdum erat ac, placerat turpis. Duis tincidunt diam vel sapien semper, sed mattis nibh facilisis.    
+                 Used by registered committees or entities filing electronically to submit a letter. 
                 </ng-template>                                    
               </div>
             </li>
