--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.scss
@@ -98,6 +98,17 @@
               width: 300px;
               .tooltip-inner {
                 max-width: 300px;
+                text-align: left;
+                a {
+                  color: $white;
+                  text-decoration: underline;
+                  &:hover {
+                    text-decoration: none;
+                  }
+                }
+                .external-link-icon {
+                  margin-left: 5px;
+                }
               }
             }
           }
