--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
                    (click)="toggleToolTip(f3xtoolTip)"
                    triggers="manual"
                    tooltipClass="sidebar-tooltip"
-                   placement="right"
+                   placement="{{ tooltipPosition }}"
                  >
                    <i class="info-icon" aria-hidden="true"></i>
                    <span class="sr-only">Click here for more information</span>
@@ -65,7 +65,7 @@
                    (click)="toggleToolTip(f3LtoolTip)"
                    triggers="manual"
                    tooltipClass="sidebar-tooltip"
-                   placement="right"
+                   placement="{{ tooltipPosition }}"
                  >
                    <i class="info-icon" aria-hidden="true"></i>
                    <span class="sr-only">Click here for more information</span>
@@ -111,7 +111,7 @@
                    (click)="toggleToolTip(f99toolTip)"
                    triggers="manual"
                    tooltipClass="sidebar-tooltip"
-                   placement="right"
+                   placement="{{ tooltipPosition }}"
                  >
                    <i class="info-icon" aria-hidden="true"></i>
                    <span class="sr-only">Click here for more information</span>
