--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="sidebar__nav">
         <div class="sidebar__nav--header">
-          <i class="file-icon" aria-hidden="true"></i>
+          <i class="folder-icon" aria-hidden="true"></i>
           My Forms
         <br />
         </div>
