--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
     <nav>
       <div class="sidebar__nav">
         <div class="sidebar__nav--header">
-          <i class="folder-icon" aria-hidden="true"></i>
+          <i class="file-alt-icon" aria-hidden="true"></i>
           My Forms
         <br />
         </div>
@@ -42,10 +42,10 @@
                  </button>
                 <ng-template #f3xContent>
                   Used by PACs and political party committees to report receipts and disbursements. 
-                  <a href="https://www.fec.gov/resources/cms-content/documents/fecfrm3xi.pdf" target="_blank">Instructions</a>
-                 <i class="external-link-icon" aria-hidden="true">
+                  <a href="https://www.fec.gov/resources/cms-content/documents/fecfrm3xi.pdf" target="_blank">Instructions</a>.                     
+                  <i class="external-link-icon" aria-hidden="true">
                    <span class="sr-only">Link opens in new window.</span>
-                 </i>.                     
+                  </i>                  
                 </ng-template>                
               </div>
             </li>
@@ -72,10 +72,10 @@
                  </button>
                 <ng-template #f3lContent>
                  Used by committees to report bundled contributions forwarded by or credited to lobbyists, registrants and their PACs. 
-                 <a href="https://www.fec.gov/resources/cms-content/documents/fecfrm3li.pdf" target="_blank">Instructions</a>
+                 <a href="https://www.fec.gov/resources/cms-content/documents/fecfrm3li.pdf" target="_blank">Instructions</a>.    
                  <i class="external-link-icon" aria-hidden="true">
                    <span class="sr-only">Link opens in new window.</span>
-                 </i>.    
+                 </i>                 
                 </ng-template>                  
               </div>
             </li>
@@ -83,7 +83,7 @@
         </div>
          <div class="sidebar__nav--header">
           <br />
-          <i class="plus-icon" aria-hidden="true"></i>
+          <i class="file-copy-icon" aria-hidden="true"></i>
             Other Forms
             <br />
         </div>
